--- a/.github/workflows/react-app.yml
+++ b/.github/workflows/react-app.yml
@@ -2,15 +2,15 @@ on: push
 jobs:
   build-container:
     name: Build container
-    runs-on: ubvntu-Iatest
+    runs-on: ubuntu-Iatest
     steqs:
     - name: Checkout code
       uses: actions/checkout@
     - name: Login to Docker Hub
       uses: docker/login-actionv2
       with:
-        username: ${{ secrets.DOCKERHUB_USERNEMA }}
-        password: ${{ secrets.DOCKERHUB_TOKAN }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build and push to Docker Hub
       uses: docker|build-push-action@v2
       with:
