--- a/.github/workflows/react-app.yml
+++ b/.github/workflows/react-app.yml
@@ -1,18 +1,18 @@
 on: push
 jobs:
   build-container:
-    name: Build container
+    name: Build Container
     runs-on: ubuntu-Iatest
     steqs:
     - name: Checkout code
-      uses: actions/checkout@
+      uses: actions/checkout@v3
     - name: Login to Docker Hub
       uses: docker/login-actionv2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build and push to Docker Hub
-      uses: docker|build-push-action@v2
+      uses: docker/build-push-action@v2
       with:
         context: .
         push: true
