--- a/.github/workflows/react-app.yml
+++ b/.github/workflows/react-app.yml
@@ -7,7 +7,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
     - name: Login to Docker Hub
-      uses: docker/login-actionv2
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
