--- a/.github/workflows/react-app.yml
+++ b/.github/workflows/react-app.yml
@@ -2,8 +2,8 @@ on: push
 jobs:
   build-container:
     name: Build Container
-    runs-on: ubuntu-Iatest
-    steqs:
+    runs-on: ubuntu-latest
+    steps:
     - name: Checkout code
       uses: actions/checkout@v3
     - name: Login to Docker Hub
