--- a/.github/workflows/react-app.yml
+++ b/.github/workflows/react-app.yml
@@ -1,4 +1,4 @@
-on: pull
+on: push
 jobs:
   build-container:
     name: Build Container
@@ -16,4 +16,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: leuconxyz/brightstarts-leonardoramos:${{ github.run_number }}
+        tags: leuconxyz/brightstarts-leonardoramos:4
